--- a/index.html
+++ b/index.html
@@ -22,16 +22,9 @@
   </script>
 </head>
 <body>
-  <img id="background" src="images/background2.jpg">
   <div id="structure">
     <div id="header" itemscope itemtype="http://schema.org/Person">
       <h1 itemprop="name"><a href="http://elbenshira.com">Elben Shira</a></h1>
-    </div>
-    <div class="quote">
-    Where, O death, is your victory? Where, O death, is your sting? 
-      <div class="quoter">
-      1 Corinthians 15:55
-      </div>
     </div>
 
     <div class="block">
@@ -42,7 +35,7 @@
         target="_blank">Square</a>.
       </p> 
       
-      <h2>Projects</h2>
+      <h2>Fun Projects</h2>
       <ul>
         <li><a href="http://github.com/eshira/carnival/"
           target="_blank">Carnival</a> is a research project for finding experts
