--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </script>
 </head>
 <body>
+  <!-- <img id="background" src="images/background2.jpg"> -->
   <div id="structure">
     <div id="header" itemscope itemtype="http://schema.org/Person">
       <h1 itemprop="name"><a href="http://elbenshira.com">Elben Shira</a></h1>
