--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Elben Shira
       target="_blank">Carnival</a> is a research project for finding experts
     in a code repository.
     </li>
-    <li><a href="http://elbenshira.com/curvey/"
+    <li><a href="/projects/curvey/"
       target="_blank">Curvey</a> is a b-spline demo that doesn't suck (as
     much).
     </li>
