--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ title: Elben Shira
 <!-- <div id="home"> -->
 <!--   <h1>Blog Posts</h1> -->
 <!--   <ul class="posts"> -->
-<!--     {% for post in site.posts %} -->
-<!--       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li> -->
-<!--     {% endfor %} -->
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
 <!--   </ul> -->
 <!-- </div> -->
 
