Formatting of blog lists.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@ Currently hacking at <a href="http://massrelevance.com"
 <ul>
   {% for post in site.tags.favorite %}
     <li itemscope itemtype="http://schema.org/Article">
-      <a itemprop="url" href="{{ post.url }}">{{ post.title }}</a> &mdash; <span>{{ post.date | date_to_long_string }}</span>
+      <div class="article-item">
+        <a itemprop="url" href="{{ post.url }}">{{ post.title }}</a> &mdash; <span>{{ post.date | date_to_long_string }}</span>
+        <div class="article-metadata">
+          <span class="article-date">{{ post.date | date_to_long_string }}</span>
+        </div>
+      </div>
     </li>
   {% endfor %}
 </ul>
@@ -51,8 +56,12 @@ Currently hacking at <a href="http://massrelevance.com"
 <ul class="posts">
   {% for post in site.posts %}
   <li itemscope itemtype="http://schema.org/Article">
-    <span>{{ post.date | date_to_long_string }}</span> &raquo;
+  <div class="article-item">
     <a itemprop="url" href="{{ post.url }}">{{ post.title }}</a>
+    <div class="article-metadata">
+      <span class="article-date">{{ post.date | date_to_long_string }}</span>
+    </div>
+  </div>
   </li>
   {% endfor %}
 </ul>
