Link to @massrelevance.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Elben Shira
 ---
 
 <p> 
-Currently hacking at <a href="http://massrelevance.com"
+Currently hacking at <a href="http://twitter.com/massrelevance"
   target="_blank">Mass Relevance</a>.
 </p> 
 
