Add k-means demo.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 
 <h2>Fun Projects</h2>
 <ul>
+  <li><a href="http://github.com/eshira/k-means/"
+    target="_blank">K-means</a> is a little k-means demo written in
+  Clojure.
+  </li>
   <li><a href="http://github.com/eshira/carnival/"
     target="_blank">Carnival</a> is a research project for finding experts
   in a code repository.
