--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 <h2>Fun Projects</h2>
 <ul>
   <li><a href="http://github.com/eshira/k-means/"
-    target="_blank">K-means</a> is a little k-means demo written in
+    target="_blank">K-means</a> little k-means demo written in
   Clojure.
   </li>
   <li><a href="http://github.com/eshira/carnival/"
-    target="_blank">Carnival</a> is a research project for finding experts
+    target="_blank">Carnival</a> research project for finding experts
   in a code repository.
   </li>
   <li><a href="/projects/curvey/"
-    target="_blank">Curvey</a> is a b-spline demo that doesn't suck (as
+    target="_blank">Curvey</a> b-spline demo that doesn't suck (as
   much).
   </li>
   <li><a href="http://tudu.us"
-    target="_blank">Tudu.us</a> is a dead simple to-do list that doesn't get
+    target="_blank">Tudu.us</a> dead simple to-do list that doesn't get
   in your way.
   </li>
   <li><a href="http://github.com/eshira/timethis"
-    target="_blank">TimeThis</a> times your Python functions in a super
+    target="_blank">TimeThis</a> time your Python functions in a super
   simple way.
   </li>
   <li><a href="http://github.com/jasontbradshaw/iron-tools"
-    target="_blank">Iron Tools</a> streams live HD video for conferences.</li>
+    target="_blank">Iron Tools</a> stream live HD video for conferences.</li>
   <li><a href="http://github.com/eshira/stone-tools"
     target="_blank">Stone Tools</a> was Iron Tools Version 0.</li>
   <li><a href="http://github.com/eshira/kapal" target="_blank">Kapal</a>
-  gets a robot from Point A to Point B.</li>
+  get a robot from Point A to Point B.</li>
 </ul>
 
 <h2>Articles and Essays</h2>
