--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 <h2>Fun Projects</h2>
 <ul>
   <li><a href="http://github.com/eshira/k-means/"
-    target="_blank">K-means</a> little k-means demo written in
-  Clojure.
+    target="_blank">K-means</a> demo written in Clojure.
   </li>
   <li><a href="http://github.com/eshira/carnival/"
     target="_blank">Carnival</a> research project for finding experts
