--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 
 <h2>Articles and Essays</h2>
 
-<h3>Favorties</h3>
+<h3>Favorites</h3>
 
 <ul>
   {% for post in site.tags.favorite %}
