--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 
 <h2>Fun Projects</h2>
 <ul>
-  <li><a href="http://github.com/eshira/k-means/"
+  <li><a href="http://github.com/elben/k-means/"
     target="_blank">K-means</a> demo written in Clojure.
   </li>
-  <li><a href="http://github.com/eshira/carnival/"
+  <li><a href="http://github.com/elben/carnival/"
     target="_blank">Carnival</a> research project for finding experts
   in a code repository.
   </li>
@@ -25,15 +25,15 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
     target="_blank">Tudu.us</a> dead simple to-do list that doesn't get
   in your way.
   </li>
-  <li><a href="http://github.com/eshira/timethis"
+  <li><a href="http://github.com/elben/timethis"
     target="_blank">TimeThis</a> time your Python functions in a super
   simple way.
   </li>
   <li><a href="http://github.com/jasontbradshaw/iron-tools"
     target="_blank">Iron Tools</a> stream live HD video for conferences.</li>
-  <li><a href="http://github.com/eshira/stone-tools"
+  <li><a href="http://github.com/elben/stone-tools"
     target="_blank">Stone Tools</a> was Iron Tools Version 0.</li>
-  <li><a href="http://github.com/eshira/kapal" target="_blank">Kapal</a>
+  <li><a href="http://github.com/elben/kapal" target="_blank">Kapal</a>
   get a robot from Point A to Point B.</li>
 </ul>
 
