--- a/projects/curvey/index.html
+++ b/projects/curvey/index.html
@@ -10,7 +10,7 @@
         <h1>Curvey</h1>
         <div id="subtitle">A b-spline sandbox that doesn't suck (as much).</div>
         <p>by <a href="http://elbenshira.com">Elben Shira</a></p>
-        <p><a href="http://github.com/eshira/curvey/">Download source.</a></p>
+        <p><a href="http://github.com/elben/curvey/">Download source.</a></p>
       </div>
 
       <div id="abstract" class="section">
@@ -105,11 +105,11 @@
         <h3>Setting Up</h3>
 
         <p>Download the latest stable version: <a
-          href="https://github.com/eshira/curvey/archives/master">https://github.com/eshira/curvey/archives/master</a></p>
+          href="https://github.com/elben/curvey/archives/master">https://github.com/elben/curvey/archives/master</a></p>
 
         <p>If you like living on the edge, you can download the latest git
         snapshot:</p>
-        <div class="code">$ git clone git://github.com/eshira/curvey.git</div>
+        <div class="code">$ git clone git://github.com/elben/curvey.git</div>
 
         <p>Curvey depends on Python an the Tkinter library, which is included in
         standard Python distributions. It has been tested on Python 2.6.</p>
