--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@ layout: default
 title: Elben Shira
 ---
 
-<p> 
+<p>
 Currently hacking at <a href="http://twitter.com/massrelevance"
   target="_blank">Mass Relevance</a>.
 </p> 
 
-<h2>Fun Projects</h2>
-<ul>
-  <li><a href="http://github.com/elben/k-means/"
+<h2>Personal Projects</h2>
+<ul class="projects-list">
+  <li><a href="https://github.com/elben/planjure/" target="_blank">Planjure</a>
+  is a path-planning <a href="http://elbenshira.com/projects/planjure/"
+    target="_blank">demo</a> and a study in ClojureScript, Om and core.async.
+  </li>
+  <li><a href="https://github.com/elben/k-means/"
     target="_blank">K-means</a> demo written in Clojure.
   </li>
-  <li><a href="http://github.com/elben/carnival/"
+  <li><a href="https://github.com/elben/carnival/"
     target="_blank">Carnival</a> research project for finding experts
   in a code repository.
   </li>
@@ -22,18 +26,17 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
   much).
   </li>
   <li><a href="http://tudu.us"
-    target="_blank">Tudu.us</a> dead simple to-do list that doesn't get
-  in your way.
+    target="_blank">Tudu.us</a> is the app I built to learn Rails.
   </li>
-  <li><a href="http://github.com/elben/timethis"
+  <li><a href="https://github.com/elben/timethis"
     target="_blank">TimeThis</a> time your Python functions in a super
   simple way.
   </li>
-  <li><a href="http://github.com/jasontbradshaw/iron-tools"
+  <li><a href="https://github.com/jasontbradshaw/iron-tools"
     target="_blank">Iron Tools</a> stream live HD video for conferences.</li>
-  <li><a href="http://github.com/elben/stone-tools"
+  <li><a href="https://github.com/elben/stone-tools"
     target="_blank">Stone Tools</a> was Iron Tools Version 0.</li>
-  <li><a href="http://github.com/elben/kapal" target="_blank">Kapal</a>
+  <li><a href="https://github.com/elben/kapal" target="_blank">Kapal</a>
   get a robot from Point A to Point B.</li>
 </ul>
 
