--- a/projects/planjure/index.html
+++ b/projects/planjure/index.html
@@ -27,6 +27,6 @@
     <script src="http://fb.me/react-0.9.0.js"></script>
     <script src="out/goog/base.js" type="text/javascript"></script>
     <script src="planjure.js" type="text/javascript"></script>
-    <script type="text/javascript">goog.require("planjure.core");</script>
+    <script type="text/javascript">goog.require("planjure.demo");</script>
   </body>
 </html>
