Remove Disqus (for now). Footer only in index.

--- a/index.html
+++ b/index.html
@@ -72,3 +72,8 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
   {% endfor %}
 </ul>
 
+<div id="footer">
+  <ul>
+    <li><a href="http://twitter.com/elbenshira" target="_blank">@elbenshira</a></li>
+  </ul>
+</div>
