Simpler syntax highlighting. Margins and line heights.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 </p> 
 
 <h2>Personal Projects</h2>
-<ul class="projects-list">
+<ul class="projects-list simple">
   <li><a href="https://github.com/elben/planjure/" target="_blank">Planjure</a>
   is a path-planning <a href="http://elbenshira.com/projects/planjure/"
     target="_blank">demo</a> and a study in ClojureScript, Om and core.async.
@@ -44,7 +44,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 
 <h3>Favorites</h3>
 
-<ul>
+<ul class="simple">
   {% for post in site.tags.favorite %}
     <li itemscope itemtype="http://schema.org/Article">
       <div class="article-item">
@@ -59,7 +59,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 
 <h3>Index</h3>
 
-<ul class="posts">
+<ul class="posts simple">
   {% for post in site.posts %}
   <li itemscope itemtype="http://schema.org/Article">
   <div class="article-item">
@@ -73,7 +73,7 @@ Currently hacking at <a href="http://twitter.com/massrelevance"
 </ul>
 
 <div id="footer">
-  <ul>
+  <ul class="simple">
     <li><a href="http://twitter.com/elbenshira" target="_blank">@elbenshira</a></li>
   </ul>
 </div>
