--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Elben Shira
 ---
 
+<p>Software engineer interested in programming languages, distributed systems and machine learning.</p>
+
 <ul class="projects-list simple">
   <li><a href="https://github.com/elben/planjure/" target="_blank">Planjure</a>
   is a path-planning <a href="http://elbenshira.com/projects/planjure/"
