--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Elben Shira
 ---
 
-<p>Software engineer interested in programming languages, distributed systems and machine learning.</p>
+<p>I'm interested in programming languages, distributed systems and machine learning.</p>
 
 <ul class="projects-list simple">
   <li><a href="https://github.com/elben/planjure/" target="_blank">Planjure</a>
