Update planjure to e6efa09.

--- a/projects/planjure/index.html
+++ b/projects/planjure/index.html
@@ -18,6 +18,11 @@
       <div class="header">
         <h1>PLANJURE</h1>
         <p>Demo of path-planning algorithms.</p>
+        <ul>
+          <li>Paint canvas with mouse.</li>
+          <li>Start at black node, finish at red node. Click to move.</li>
+          <li><a href="https://github.com/elben/planjure/">Source code here</a>.</li>
+        </ul>
       </div>
       <div id="world"></div>
       <div id="toolbar"></div>
