--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Elben Shira
   get a robot from Point A to Point B.</li>
 </ul>
 
-<h2>Articles and Essays</h2>
+<h2>Blog</h2>
 
 <h3>Favorites</h3>
 
@@ -68,8 +68,16 @@ title: Elben Shira
   {% endfor %}
 </ul>
 
+<h2>Other writings</h2>
+
+<ul class="other-writings simple">
+  <li>
+    <a href="https://medium.com/@elbenshira/kilimanjaro-d65f00ef96a3" target="_blank">Kilimanjaro</a>
+    <p>My experience on summit night. January 2012.</p>
+  </li>
+</ul>
+
 <div id="footer">
-  <ul class="simple">
-    <li><a href="http://twitter.com/elbenshira" target="_blank">@elbenshira</a></li>
-  </ul>
+  <hr>
+  <a href="http://twitter.com/elbenshira" target="_blank">@elbenshira</a>
 </div>
