Add initial scale to viewport. Favorites -> Recommended

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Elben Shira
 
 <h2>Blog</h2>
 
-<h3>Favorites</h3>
+<h3>Recommended</h3>
 
 <ul class="simple">
   {% for post in site.tags.favorite %}
