Point links to /p/

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Elben Shira
 
 <ul class="projects-list simple">
   <li><a href="https://github.com/elben/planjure/" target="_blank">Planjure</a>
-  is a path-planning <a href="http://elbenshira.com/projects/planjure/"
+  is a path-planning <a href="/p/planjure/"
     target="_blank">demo</a> and a study in ClojureScript, Om and core.async.
   </li>
   <li><a href="https://github.com/elben/k-means/"
@@ -17,7 +17,7 @@ title: Elben Shira
     target="_blank">Carnival</a> research project for finding experts
   in a code repository.
   </li>
-  <li><a href="/projects/curvey/"
+  <li><a href="/p/curvey/"
     target="_blank">Curvey</a> b-spline demo that doesn't suck (as
   much).
   </li>
